--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | QR code component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <!-- Feel free to remove these styles or customize them in your stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -21,12 +21,14 @@
 
   <div class="card">
     <img src="/images/image-qr-code.png" alt="">
+    <div>
     <p class="bold-text">
       Improve your front-end skills by building projects
     </p>
     <p class="lite-text">
       Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
     </p>
+      </div>
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
