fixed no-image on GitHub page.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
   <div class="card">
-    <img src="/images/image-qr-code.png" alt="">
+    <img src="images/image-qr-code.png" alt="">
     <div>
     <p class="bold-text">
       Improve your front-end skills by building projects
